syntax = "proto3";
package sesamenet.nft;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sesamenet/nft/params.proto";
import "sesamenet/nft/nft.proto";
// this line is used by starport scaffolding # 1

option go_package = "sesamenet/x/nft/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sesamenet/nft/params";
  }
  // Queries a list of Supply items.
	rpc Supply(QuerySupplyRequest) returns (QuerySupplyResponse) {
		option (google.api.http).get = "/sesamenet/nft/collections/{denom_id}/supply";
	}

// Queries a list of Owner items.
	rpc Owner(QueryOwnerRequest) returns (QueryOwnerResponse) {
		option (google.api.http).get = "/sesamenet/nft/nfts/{owner}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QuerySupplyRequest {
  string denom_id = 1 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string owner = 2;
}

message QuerySupplyResponse {
  uint64 amount = 1;
}

message QueryOwnerRequest {
  string denom_id = 1 [(gogoproto.moretags) = "yaml:\"denom_id\""];
  string owner = 2 [(gogoproto.moretags) = "yaml:\"owner\""];

  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryOwnerResponse {
  Owner owner = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
